<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:cardCornerRadius="15dp"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:id="@+id/textPickerHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="24dp"
                    android:text="@string/rationale_header"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="32dp" android:layout_gravity="center_horizontal"/>

            <TextView
                    android:id="@+id/textAnswerMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_description"
                    android:textSize="18sp"
                    android:singleLine="false"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="32dp"/>
            <LinearLayout
                    android:id="@+id/columnLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/buttonCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/button_cancel"/>

                <Button
                        android:id="@+id/buttonAllow"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/button_allow"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>